--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.2.7",
     "@nestjs/typeorm": "^10.0.0",
+    "express": "^4.18.2",
     "mysql2": "^3.6.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
