--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.2.7",
     "@nestjs/typeorm": "^10.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mysql2": "^3.6.2",
