--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-oauth2-jwt-bearer": "^1.6.0",
     "mysql2": "^3.6.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
