--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.2.7",
     "@nestjs/typeorm": "^10.0.0",
+    "auth0": "^4.1.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
     "express-oauth2-jwt-bearer": "^1.6.0",
     "mysql2": "^3.6.2",
     "pg": "^8.11.3",
