--- a/.env.seample
+++ b/.env.seample
@@ -1,9 +1,22 @@
 PORT=
 HOST=
-#bd options
+PAGE_PAGINATION=
+SECRET_ACCESS=
+SECRET_REFRESH=
+SECRET_ACTION=
+#Auth0
+AUTH0_ISSUER_URL_DOMAIN=
+AUTH0_AUDIENCE=
+AUTH0_CLIET_ID=
+AUTH0_CLIET_SECRET=
+#bd options localhost postgredb 5432default
 POSTGRES_HOST=
 POSTGRES_USER=
 POSTGRES_ROOT_PASSWORD=
-POSTGRES_DATABASE=-
-POSTGRES_LOCAL_PORT=
+POSTGRES_DATABASE=
 POSTGRES_DOCKER_PORT=
+POSTGRES_LOCAL_PORT=
+#nest potst
+NODE_LOCAL_PORT=
+NODE_DOCKER_PORT=
+
