@Body(new ValidationPipe()) createCatDto: CreateCatDto, dosent console log

--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
