--- a/.env.seample
+++ b/.env.seample
@@ -2,8 +2,12 @@ PORT=
 HOST=
 PAGE_PAGINATION=
 SECRET_ACCESS=
+EXPIRE_ACCESS=
 SECRET_REFRESH=
+EXPIRE_REFRESH=
 SECRET_ACTION=
+EXPIRE_ACTION=
+IGNORE_EXPIRATION_TOKEN=
 #Auth0
 AUTH0_ISSUER_URL_DOMAIN=
 AUTH0_AUDIENCE=
