conected Redis but prossec env dosent work

--- a/.env.seample
+++ b/.env.seample
@@ -20,7 +20,12 @@ POSTGRES_ROOT_PASSWORD=
 POSTGRES_DATABASE=
 POSTGRES_DOCKER_PORT=
 POSTGRES_LOCAL_PORT=
-#nest potst
+#redis options
+REDIS_HOST=
+REDIS_PORT=17773
+REDIS_PASSWORD=
+REDIS_TIME=
+#nest ports
 NODE_LOCAL_PORT=
 NODE_DOCKER_PORT=
 
