--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "types": ["node", "typeorm"],
     "module": "commonjs",
     "declaration": true,
     "removeComments": true,
