--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.2.7",
+    "@nestjs/platform-socket.io": "^10.3.2",
+    "@nestjs/schedule": "^4.0.1",
     "@nestjs/typeorm": "^10.0.0",
+    "@nestjs/websockets": "^10.3.2",
     "@songkeys/nestjs-redis": "^10.0.0",
     "auth0": "^4.1.0",
     "bcryptjs": "^2.4.3",
@@ -51,6 +54,7 @@
     "redis": "^4.6.12",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.7.4",
     "typeorm": "^0.3.19"
   },
   "devDependencies": {
